parser/dslquery_parser.go
// Code generated from DslQuery.g4 by ANTLR 4.8. DO NOT EDIT.

package parser // DslQuery

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'.'", "'-'", "", "'null'", "", "", "", "", "", "", "", "", "", "",
	"", "'ne'", "'gt'", "'lt'", "'ge'", "'le'", "'co'", "'sw'", "'ew'", "'('",
	"')'",
}
var symbolicNames = []string{
	"", "", "", "BOOLEAN", "NULL", "COMPARISON_OPERATOR", "AND", "OR", "O",
	"R", "A", "N", "D", "EQ", "E", "Q", "NE", "GT", "LT", "GE", "LE", "CO",
	"SW", "EW", "BR_OPEN", "BR_CLOSE", "ATTRNAME", "STRING", "DOUBLE", "INT",
	"EXP", "WS",
}

var ruleNames = []string{
	"start", "query", "attrPath", "attrValue",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type DslQueryParser struct {
	*antlr.BaseParser
}

func NewDslQueryParser(input antlr.TokenStream) *DslQueryParser {
	this := new(DslQueryParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "DslQuery.g4"

	return this
}

// DslQueryParser tokens.
const (
	DslQueryParserEOF                 = antlr.TokenEOF
	DslQueryParserT__0                = 1
	DslQueryParserT__1                = 2
	DslQueryParserBOOLEAN             = 3
	DslQueryParserNULL                = 4
	DslQueryParserCOMPARISON_OPERATOR = 5
	DslQueryParserAND                 = 6
	DslQueryParserOR                  = 7
	DslQueryParserO                   = 8
	DslQueryParserR                   = 9
	DslQueryParserA                   = 10
	DslQueryParserN                   = 11
	DslQueryParserD                   = 12
	DslQueryParserEQ                  = 13
	DslQueryParserE                   = 14
	DslQueryParserQ                   = 15
	DslQueryParserNE                  = 16
	DslQueryParserGT                  = 17
	DslQueryParserLT                  = 18
	DslQueryParserGE                  = 19
	DslQueryParserLE                  = 20
	DslQueryParserCO                  = 21
	DslQueryParserSW                  = 22
	DslQueryParserEW                  = 23
	DslQueryParserBR_OPEN             = 24
	DslQueryParserBR_CLOSE            = 25
	DslQueryParserATTRNAME            = 26
	DslQueryParserSTRING              = 27
	DslQueryParserDOUBLE              = 28
	DslQueryParserINT                 = 29
	DslQueryParserEXP                 = 30
	DslQueryParserWS                  = 31
)

// DslQueryParser rules.
const (
	DslQueryParserRULE_start     = 0
	DslQueryParserRULE_query     = 1
	DslQueryParserRULE_attrPath  = 2
	DslQueryParserRULE_attrValue = 3
)

// IStartContext is an interface to support dynamic dispatch.
type IStartContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStartContext differentiates from other interfaces.
	IsStartContext()
}

type StartContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStartContext() *StartContext {
	var p = new(StartContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DslQueryParserRULE_start
	return p
}

func (*StartContext) IsStartContext() {}

func NewStartContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StartContext {
	var p = new(StartContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DslQueryParserRULE_start

	return p
}

func (s *StartContext) GetParser() antlr.Parser { return s.parser }

func (s *StartContext) Query() IQueryContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IQueryContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IQueryContext)
}

func (s *StartContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StartContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StartContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DslQueryListener); ok {
		listenerT.EnterStart(s)
	}
}

func (s *StartContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DslQueryListener); ok {
		listenerT.ExitStart(s)
	}
}

func (p *DslQueryParser) Start() (localctx IStartContext) {
	localctx = NewStartContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, DslQueryParserRULE_start)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(8)
		p.query(0)
	}

	return localctx
}

// IQueryContext is an interface to support dynamic dispatch.
type IQueryContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsQueryContext differentiates from other interfaces.
	IsQueryContext()
}

type QueryContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyQueryContext() *QueryContext {
	var p = new(QueryContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DslQueryParserRULE_query
	return p
}

func (*QueryContext) IsQueryContext() {}

func NewQueryContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *QueryContext {
	var p = new(QueryContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DslQueryParserRULE_query

	return p
}

func (s *QueryContext) GetParser() antlr.Parser { return s.parser }

func (s *QueryContext) CopyFrom(ctx *QueryContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *QueryContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *QueryContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type CompareExpContext struct {
	*QueryContext
	propertyName  IAttrPathContext
	op            antlr.Token
	propertyValue IAttrValueContext
}

func NewCompareExpContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *CompareExpContext {
	var p = new(CompareExpContext)

	p.QueryContext = NewEmptyQueryContext()
	p.parser = parser
	p.CopyFrom(ctx.(*QueryContext))

	return p
}

func (s *CompareExpContext) GetOp() antlr.Token { return s.op }

func (s *CompareExpContext) SetOp(v antlr.Token) { s.op = v }

func (s *CompareExpContext) GetPropertyName() IAttrPathContext { return s.propertyName }

func (s *CompareExpContext) GetPropertyValue() IAttrValueContext { return s.propertyValue }

func (s *CompareExpContext) SetPropertyName(v IAttrPathContext) { s.propertyName = v }

func (s *CompareExpContext) SetPropertyValue(v IAttrValueContext) { s.propertyValue = v }

func (s *CompareExpContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CompareExpContext) AttrPath() IAttrPathContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAttrPathContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IAttrPathContext)
}

func (s *CompareExpContext) COMPARISON_OPERATOR() antlr.TerminalNode {
	return s.GetToken(DslQueryParserCOMPARISON_OPERATOR, 0)
}

func (s *CompareExpContext) AttrValue() IAttrValueContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAttrValueContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IAttrValueContext)
}

func (s *CompareExpContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DslQueryListener); ok {
		listenerT.EnterCompareExp(s)
	}
}

func (s *CompareExpContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DslQueryListener); ok {
		listenerT.ExitCompareExp(s)
	}
}

type AndLogicalExpContext struct {
	*QueryContext
	leftQuery  IQueryContext
	op         antlr.Token
	rightQuery IQueryContext
}

func NewAndLogicalExpContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *AndLogicalExpContext {
	var p = new(AndLogicalExpContext)

	p.QueryContext = NewEmptyQueryContext()
	p.parser = parser
	p.CopyFrom(ctx.(*QueryContext))

	return p
}

func (s *AndLogicalExpContext) GetOp() antlr.Token { return s.op }

func (s *AndLogicalExpContext) SetOp(v antlr.Token) { s.op = v }

func (s *AndLogicalExpContext) GetLeftQuery() IQueryContext { return s.leftQuery }

func (s *AndLogicalExpContext) GetRightQuery() IQueryContext { return s.rightQuery }

func (s *AndLogicalExpContext) SetLeftQuery(v IQueryContext) { s.leftQuery = v }

func (s *AndLogicalExpContext) SetRightQuery(v IQueryContext) { s.rightQuery = v }

func (s *AndLogicalExpContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AndLogicalExpContext) AllQuery() []IQueryContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IQueryContext)(nil)).Elem())
	var tst = make([]IQueryContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IQueryContext)
		}
	}

	return tst
}

func (s *AndLogicalExpContext) Query(i int) IQueryContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IQueryContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IQueryContext)
}

func (s *AndLogicalExpContext) AND() antlr.TerminalNode {
	return s.GetToken(DslQueryParserAND, 0)
}

func (s *AndLogicalExpContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DslQueryListener); ok {
		listenerT.EnterAndLogicalExp(s)
	}
}

func (s *AndLogicalExpContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DslQueryListener); ok {
		listenerT.ExitAndLogicalExp(s)
	}
}

type BracketExpContext struct {
	*QueryContext
	leftBracket  antlr.Token
	rightBracket antlr.Token
}

func NewBracketExpContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *BracketExpContext {
	var p = new(BracketExpContext)

	p.QueryContext = NewEmptyQueryContext()
	p.parser = parser
	p.CopyFrom(ctx.(*QueryContext))

	return p
}

func (s *BracketExpContext) GetLeftBracket() antlr.Token { return s.leftBracket }

func (s *BracketExpContext) GetRightBracket() antlr.Token { return s.rightBracket }

func (s *BracketExpContext) SetLeftBracket(v antlr.Token) { s.leftBracket = v }

func (s *BracketExpContext) SetRightBracket(v antlr.Token) { s.rightBracket = v }

func (s *BracketExpContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BracketExpContext) Query() IQueryContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IQueryContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IQueryContext)
}

func (s *BracketExpContext) BR_OPEN() antlr.TerminalNode {
	return s.GetToken(DslQueryParserBR_OPEN, 0)
}

func (s *BracketExpContext) BR_CLOSE() antlr.TerminalNode {
	return s.GetToken(DslQueryParserBR_CLOSE, 0)
}

func (s *BracketExpContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DslQueryListener); ok {
		listenerT.EnterBracketExp(s)
	}
}

func (s *BracketExpContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DslQueryListener); ok {
		listenerT.ExitBracketExp(s)
	}
}

type OrLogicalExpContext struct {
	*QueryContext
	leftQuery  IQueryContext
	op         antlr.Token
	rightQuery IQueryContext
}

func NewOrLogicalExpContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *OrLogicalExpContext {
	var p = new(OrLogicalExpContext)

	p.QueryContext = NewEmptyQueryContext()
	p.parser = parser
	p.CopyFrom(ctx.(*QueryContext))

	return p
}

func (s *OrLogicalExpContext) GetOp() antlr.Token { return s.op }

func (s *OrLogicalExpContext) SetOp(v antlr.Token) { s.op = v }

func (s *OrLogicalExpContext) GetLeftQuery() IQueryContext { return s.leftQuery }

func (s *OrLogicalExpContext) GetRightQuery() IQueryContext { return s.rightQuery }

func (s *OrLogicalExpContext) SetLeftQuery(v IQueryContext) { s.leftQuery = v }

func (s *OrLogicalExpContext) SetRightQuery(v IQueryContext) { s.rightQuery = v }

func (s *OrLogicalExpContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *OrLogicalExpContext) AllQuery() []IQueryContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IQueryContext)(nil)).Elem())
	var tst = make([]IQueryContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IQueryContext)
		}
	}

	return tst
}

func (s *OrLogicalExpContext) Query(i int) IQueryContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IQueryContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IQueryContext)
}

func (s *OrLogicalExpContext) OR() antlr.TerminalNode {
	return s.GetToken(DslQueryParserOR, 0)
}

func (s *OrLogicalExpContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DslQueryListener); ok {
		listenerT.EnterOrLogicalExp(s)
	}
}

func (s *OrLogicalExpContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DslQueryListener); ok {
		listenerT.ExitOrLogicalExp(s)
	}
}

func (p *DslQueryParser) Query() (localctx IQueryContext) {
	return p.query(0)
}

func (p *DslQueryParser) query(_p int) (localctx IQueryContext) {
	var _parentctx antlr.ParserRuleContext = p.GetParserRuleContext()
	_parentState := p.GetState()
	localctx = NewQueryContext(p, p.GetParserRuleContext(), _parentState)
	var _prevctx IQueryContext = localctx
	var _ antlr.ParserRuleContext = _prevctx // TODO: To prevent unused variable warning.
	_startState := 2
	p.EnterRecursionRule(localctx, 2, DslQueryParserRULE_query, _p)

	defer func() {
		p.UnrollRecursionContexts(_parentctx)
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(19)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case DslQueryParserBR_OPEN:
		localctx = NewBracketExpContext(p, localctx)
		p.SetParserRuleContext(localctx)
		_prevctx = localctx

		{
			p.SetState(11)

			var _m = p.Match(DslQueryParserBR_OPEN)

			localctx.(*BracketExpContext).leftBracket = _m
		}
		{
			p.SetState(12)
			p.query(0)
		}
		{
			p.SetState(13)

			var _m = p.Match(DslQueryParserBR_CLOSE)

			localctx.(*BracketExpContext).rightBracket = _m
		}

	case DslQueryParserATTRNAME:
		localctx = NewCompareExpContext(p, localctx)
		p.SetParserRuleContext(localctx)
		_prevctx = localctx
		{
			p.SetState(15)

			var _x = p.AttrPath()

			localctx.(*CompareExpContext).propertyName = _x
		}
		{
			p.SetState(16)

			var _m = p.Match(DslQueryParserCOMPARISON_OPERATOR)

			localctx.(*CompareExpContext).op = _m
		}
		{
			p.SetState(17)

			var _x = p.AttrValue()

			localctx.(*CompareExpContext).propertyValue = _x
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}
	p.GetParserRuleContext().SetStop(p.GetTokenStream().LT(-1))
	p.SetState(29)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			if p.GetParseListeners() != nil {
				p.TriggerExitRuleEvent()
			}
			_prevctx = localctx
			p.SetState(27)
			p.GetErrorHandler().Sync(p)
			switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext()) {
			case 1:
				localctx = NewAndLogicalExpContext(p, NewQueryContext(p, _parentctx, _parentState))
				localctx.(*AndLogicalExpContext).leftQuery = _prevctx

				p.PushNewRecursionContext(localctx, _startState, DslQueryParserRULE_query)
				p.SetState(21)

				if !(p.Precpred(p.GetParserRuleContext(), 3)) {
					panic(antlr.NewFailedPredicateException(p, "p.Precpred(p.GetParserRuleContext(), 3)", ""))
				}
				{
					p.SetState(22)

					var _m = p.Match(DslQueryParserAND)

					localctx.(*AndLogicalExpContext).op = _m
				}
				{
					p.SetState(23)

					var _x = p.query(4)

					localctx.(*AndLogicalExpContext).rightQuery = _x
				}

			case 2:
				localctx = NewOrLogicalExpContext(p, NewQueryContext(p, _parentctx, _parentState))
				localctx.(*OrLogicalExpContext).leftQuery = _prevctx

				p.PushNewRecursionContext(localctx, _startState, DslQueryParserRULE_query)
				p.SetState(24)

				if !(p.Precpred(p.GetParserRuleContext(), 2)) {
					panic(antlr.NewFailedPredicateException(p, "p.Precpred(p.GetParserRuleContext(), 2)", ""))
				}
				{
					p.SetState(25)

					var _m = p.Match(DslQueryParserOR)

					localctx.(*OrLogicalExpContext).op = _m
				}
				{
					p.SetState(26)

					var _x = p.query(3)

					localctx.(*OrLogicalExpContext).rightQuery = _x
				}

			}

		}
		p.SetState(31)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext())
	}

	return localctx
}

// IAttrPathContext is an interface to support dynamic dispatch.
type IAttrPathContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsAttrPathContext differentiates from other interfaces.
	IsAttrPathContext()
}

type AttrPathContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAttrPathContext() *AttrPathContext {
	var p = new(AttrPathContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DslQueryParserRULE_attrPath
	return p
}

func (*AttrPathContext) IsAttrPathContext() {}

func NewAttrPathContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AttrPathContext {
	var p = new(AttrPathContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DslQueryParserRULE_attrPath

	return p
}

func (s *AttrPathContext) GetParser() antlr.Parser { return s.parser }

func (s *AttrPathContext) AllATTRNAME() []antlr.TerminalNode {
	return s.GetTokens(DslQueryParserATTRNAME)
}

func (s *AttrPathContext) ATTRNAME(i int) antlr.TerminalNode {
	return s.GetToken(DslQueryParserATTRNAME, i)
}

func (s *AttrPathContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AttrPathContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *AttrPathContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DslQueryListener); ok {
		listenerT.EnterAttrPath(s)
	}
}

func (s *AttrPathContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DslQueryListener); ok {
		listenerT.ExitAttrPath(s)
	}
}

func (p *DslQueryParser) AttrPath() (localctx IAttrPathContext) {
	localctx = NewAttrPathContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, DslQueryParserRULE_attrPath)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(32)
		p.Match(DslQueryParserATTRNAME)
	}
	p.SetState(35)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == DslQueryParserT__0 {
		{
			p.SetState(33)
			p.Match(DslQueryParserT__0)
		}
		{
			p.SetState(34)
			p.Match(DslQueryParserATTRNAME)
		}

	}

	return localctx
}

// IAttrValueContext is an interface to support dynamic dispatch.
type IAttrValueContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsAttrValueContext differentiates from other interfaces.
	IsAttrValueContext()
}

type AttrValueContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAttrValueContext() *AttrValueContext {
	var p = new(AttrValueContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DslQueryParserRULE_attrValue
	return p
}

func (*AttrValueContext) IsAttrValueContext() {}

func NewAttrValueContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AttrValueContext {
	var p = new(AttrValueContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DslQueryParserRULE_attrValue

	return p
}

func (s *AttrValueContext) GetParser() antlr.Parser { return s.parser }

func (s *AttrValueContext) CopyFrom(ctx *AttrValueContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *AttrValueContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AttrValueContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type BooleanContext struct {
	*AttrValueContext
}

func NewBooleanContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *BooleanContext {
	var p = new(BooleanContext)

	p.AttrValueContext = NewEmptyAttrValueContext()
	p.parser = parser
	p.CopyFrom(ctx.(*AttrValueContext))

	return p
}

func (s *BooleanContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BooleanContext) BOOLEAN() antlr.TerminalNode {
	return s.GetToken(DslQueryParserBOOLEAN, 0)
}

func (s *BooleanContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DslQueryListener); ok {
		listenerT.EnterBoolean(s)
	}
}

func (s *BooleanContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DslQueryListener); ok {
		listenerT.ExitBoolean(s)
	}
}

type NullContext struct {
	*AttrValueContext
}

func NewNullContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *NullContext {
	var p = new(NullContext)

	p.AttrValueContext = NewEmptyAttrValueContext()
	p.parser = parser
	p.CopyFrom(ctx.(*AttrValueContext))

	return p
}

func (s *NullContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NullContext) NULL() antlr.TerminalNode {
	return s.GetToken(DslQueryParserNULL, 0)
}

func (s *NullContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DslQueryListener); ok {
		listenerT.EnterNull(s)
	}
}

func (s *NullContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DslQueryListener); ok {
		listenerT.ExitNull(s)
	}
}

type StringContext struct {
	*AttrValueContext
}

func NewStringContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *StringContext {
	var p = new(StringContext)

	p.AttrValueContext = NewEmptyAttrValueContext()
	p.parser = parser
	p.CopyFrom(ctx.(*AttrValueContext))

	return p
}

func (s *StringContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StringContext) STRING() antlr.TerminalNode {
	return s.GetToken(DslQueryParserSTRING, 0)
}

func (s *StringContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DslQueryListener); ok {
		listenerT.EnterString(s)
	}
}

func (s *StringContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DslQueryListener); ok {
		listenerT.ExitString(s)
	}
}

type DoubleContext struct {
	*AttrValueContext
}

func NewDoubleContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *DoubleContext {
	var p = new(DoubleContext)

	p.AttrValueContext = NewEmptyAttrValueContext()
	p.parser = parser
	p.CopyFrom(ctx.(*AttrValueContext))

	return p
}

func (s *DoubleContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DoubleContext) DOUBLE() antlr.TerminalNode {
	return s.GetToken(DslQueryParserDOUBLE, 0)
}

func (s *DoubleContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DslQueryListener); ok {
		listenerT.EnterDouble(s)
	}
}

func (s *DoubleContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DslQueryListener); ok {
		listenerT.ExitDouble(s)
	}
}

type LongContext struct {
	*AttrValueContext
}

func NewLongContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *LongContext {
	var p = new(LongContext)

	p.AttrValueContext = NewEmptyAttrValueContext()
	p.parser = parser
	p.CopyFrom(ctx.(*AttrValueContext))

	return p
}

func (s *LongContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *LongContext) INT() antlr.TerminalNode {
	return s.GetToken(DslQueryParserINT, 0)
}

func (s *LongContext) EXP() antlr.TerminalNode {
	return s.GetToken(DslQueryParserEXP, 0)
}

func (s *LongContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DslQueryListener); ok {
		listenerT.EnterLong(s)
	}
}

func (s *LongContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DslQueryListener); ok {
		listenerT.ExitLong(s)
	}
}

func (p *DslQueryParser) AttrValue() (localctx IAttrValueContext) {
	localctx = NewAttrValueContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, DslQueryParserRULE_attrValue)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(48)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case DslQueryParserBOOLEAN:
		localctx = NewBooleanContext(p, localctx)
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(37)
			p.Match(DslQueryParserBOOLEAN)
		}

	case DslQueryParserNULL:
		localctx = NewNullContext(p, localctx)
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(38)
			p.Match(DslQueryParserNULL)
		}

	case DslQueryParserSTRING:
		localctx = NewStringContext(p, localctx)
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(39)
			p.Match(DslQueryParserSTRING)
		}

	case DslQueryParserDOUBLE:
		localctx = NewDoubleContext(p, localctx)
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(40)
			p.Match(DslQueryParserDOUBLE)
		}

	case DslQueryParserT__1, DslQueryParserINT:
		localctx = NewLongContext(p, localctx)
		p.EnterOuterAlt(localctx, 5)
		p.SetState(42)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		if _la == DslQueryParserT__1 {
			{
				p.SetState(41)
				p.Match(DslQueryParserT__1)
			}

		}
		{
			p.SetState(44)
			p.Match(DslQueryParserINT)
		}
		p.SetState(46)
		p.GetErrorHandler().Sync(p)
